# padel-vision

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  padel_ar_overlay.html  pyproject.toml  render_video.py  requirements.txt
app/: streamlit_app.py
config/: default.yaml
data/: README.md
notebooks/: 01_object_detection.ipynb  README.md
notebooks/tutorials/: 01_object_detection.ipynb  court_corners.txt  padel_vision_v1.ipynb
renderer/: README.md  package-lock.json  package.json
renderer/src/: PadelVision.tsx  Root.tsx  types.ts
renderer/src/components/: CourtBackdrop.tsx  Heatmap.tsx  Hud.tsx  PlayerOverlay.tsx
renderer/src/data/: demo.ts  renderData.ts
renderer/src/lib/: projection.ts
scripts/: build_render_cutouts.py  download_sample.py  export_remotion_data.py  guide_workflow.py  pick_bev_points.py  pick_grid_roi.py  render_reel.py
src/padel_analytics/: __init__.py  cli.py  config.py  pipeline.py
src/padel_analytics/detection/: __init__.py  annotate.py  detector.py
src/padel_analytics/video/: __init__.py  io.py
src/padel_ml/: __init__.py  cli.py
src/padel_ml/court/: __init__.py  adjust.py
src/padel_ml/detection/: __init__.py  classes.py
src/padel_ml/video/: io.py
src/padel_vision/: __init__.py  calibration.py  cli.py  config.py  detect.py  final_render.py  heatmap.py  pickers.py  rings.py  track.py  workflow.py
src/padel_vision/court/: adjust.py
src/padel_vision/detection/: classes.py  detector.py
src/padel_vision/video/: io.py
tests/: test_calibration.py  test_config.py  test_track.py
