[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "padel-analytics"
version = "0.1.0"
description = "Computer-vision analytics for padel matches: detect, track, and analyze players and the ball from video."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nassim", email = "nassim@sparrow.dev" }]
keywords = ["padel", "computer-vision", "sports-analytics", "yolo", "object-detection", "tracking"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "rfdetr>=1.0",
  "ultralytics>=8.3.0",
  "supervision>=0.25.0",
  "opencv-python>=4.9.0",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "pandas>=2.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
app = ["streamlit>=1.36", "plotly>=5.22"]
notebook = ["jupyter>=1.0", "matplotlib>=3.8", "seaborn>=0.13"]
dev = ["ruff>=0.6", "black>=24.0", "pytest>=8.0", "pre-commit>=3.7"]

[project.scripts]
padel = "padel_analytics.cli:main"

[project.urls]
Homepage = "https://github.com/nassim/padel-analytics"
Repository = "https://github.com/nassim/padel-analytics"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
