[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "padel-ml"
version = "0.2.0"
description = "Computer-vision analytics for padel matches: detection, tracking, court geometry and broadcast-style AR overlays."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nassim", email = "nassim@sparrow.dev" }]
keywords = ["padel", "computer-vision", "sports-analytics", "rf-detr", "object-detection", "tracking"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "rfdetr>=1.0",
  "ultralytics>=8.3.0",
  "supervision>=0.25.0",
  "opencv-python>=4.9.0",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "fire>=0.6",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0", "ipywidgets>=8.1", "matplotlib>=3.8", "pandas>=2.1"]
dev = ["ruff>=0.6", "black>=24.0", "pytest>=8.0", "pre-commit>=3.7"]

[project.scripts]
padel-ml = "padel_ml.cli:main"

[project.urls]
Homepage = "https://github.com/nassim/padel-ml"
Repository = "https://github.com/nassim/padel-ml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
